--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><body><h1>Payment Scheduler Function with Auth Deployed</h1></body></html>
+<!DOCTYPE html><html><body><h1>Payment Scheduler Function (Parsed Inputs)</h1></body></html>
